--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="d-flex">
   <shared-sidebar></shared-sidebar>
-  <router-outlet></router-outlet>
+  <movies-home-page class="flex-fill"></movies-home-page>
 </div>
