movie search box implemented

--- a/src/app/movies/components/card-list/card-list.component.html
+++ b/src/app/movies/components/card-list/card-list.component.html
@@ -1,5 +1,6 @@
 <div class="row">
 
-  <movies-card *ngFor="let movie of movies" [movie]="movie" class="col-md-2 col-sm-6"></movies-card>
+  <movies-card *ngFor="let movie of movies" [movie]="movie" class="col-md-2 col-sm-6">
+  </movies-card>
 
 </div>
