--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -4,15 +4,8 @@
   <hr class="text-white">
 
   <div class="list-group list-reset">
-    <button class="list-group-item list-group-item-action">Película 1</button>
-    <button class="list-group-item list-group-item-action">Película 2</button>
-    <button class="list-group-item list-group-item-action">Película 3</button>
-    <button class="list-group-item list-group-item-action">Película 4</button>
-    <button class="list-group-item list-group-item-action">Película 5</button>
-    <button class="list-group-item list-group-item-action">Película 6</button>
-    <button class="list-group-item list-group-item-action">Película 7</button>
-    <button class="list-group-item list-group-item-action">Película 8</button>
-    <button class="list-group-item list-group-item-action">Película 9</button>
-    <button class="list-group-item list-group-item-action">Película 10</button>
+    <button class="list-group-item list-group-item-action" *ngFor="let tag of tags" (click)="researchTag(tag)">
+      {{tag |titlecase}}
+    </button>
   </div>
 </div>
