--- a/src/app/movies/components/card/card.component.html
+++ b/src/app/movies/components/card/card.component.html
@@ -5,6 +5,6 @@
 
 
   <div class="card-body text-white">
-    <p class="card-text">{{movie.title || 'No title'}}</p>
+    <p [routerLink]="['/movies/by', movie.id]" class="card-text">{{movie.title || 'No title'}}</p>
   </div>
 </div>
