--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,10 +1,11 @@
 <div class="bg-dark border-right p-3" id="sidebar">
 
-  <h3 class="text-light">MoviesApp</h3>
+  <h3 [routerLink]="['/home']" class="text-light">MoviesApp</h3>
   <hr class="text-white">
 
   <div class="list-group list-reset">
-    <button class="list-group-item list-group-item-action" *ngFor="let tag of tags" (click)="researchTag(tag)">
+    <button [routerLink]="['/home']" class="list-group-item list-group-item-action" *ngFor="let tag of tags"
+      (click)="researchTag(tag)">
       {{tag |titlecase}}
     </button>
   </div>
