--- a/src/app/movies/pages/details/movie-details.component.html
+++ b/src/app/movies/pages/details/movie-details.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container mt-2">
 
   <div class="row">
 
@@ -8,8 +8,13 @@
     </div>
 
     <div class="col-md-10 col-sm-6">
-      <p>Sinopsis: {{movie!.overview}}</p>
-      <p>Fecha de estreno: {{movie!.release_date}}</p>
+
+      <div class="movie-details">
+        <p class="overview">Overview: {{movie!.overview}}</p>
+        <p class="release-date">Release date: {{movie!.release_date}}</p>
+      </div>
     </div>
+
   </div>
+  <cast-card-list [movieId]="movie!.id"></cast-card-list>
 </div>
